# ayon-presence

./: .gitignore  README.md  create_package.py  package.py  pyproject.toml
client/: pyproject.toml
client/ayon_presence/: __init__.py  activity.py  addon.py  foreground.py  reporter.py  task_tracking.py
client/ayon_presence/launch_hooks/: post_start_task.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  TimeLogApp.jsx  main.jsx  styles.css  timelog.css
server/: __init__.py  aggregation.py  dashboard.py  database.py  models.py  raw_events.py  settings.py  timelog.py  title_crypto.py
tests/: test_aggregation.py  test_dashboard.py  test_foreground.py  test_frontend_registration.py  test_raw_events.py  test_reporter_task_tracking.py  test_server_models.py  test_task_tracking.py  test_timelog.py  test_title_crypto.py  test_tray_registration.py
