[project]
name = "ayon-presence"
version = "0.4.2"
description = "Tray presence and privacy-preserving activity summaries for AYON"
requires-python = ">=3.9.6"

[project.optional-dependencies]
dev = [
    "pydantic==1.10.25",
    "pytest>=8",
    "ruff>=0.11",
    "tzdata>=2025.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py39"
